// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`t-call (template calling) > a static name is a string, whatever it contains 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, withoutZero, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = callTemplate(\`a\\\`b\\\\c\`, this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`\\u00021\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > a static name is a string, whatever it contains 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span>ok</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-call (template calling) > a t-call without a body gives the called template an empty 0 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx, callTemplate } = helpers;
  
  function callBody1(ctx, node, key = "") {
    return text(\`LEAK\`);
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1[zero] = callBody1;
    ctx1[zeroCtx] = ctx;
    return callTemplate(\`outer\`, this, app, ctx1, node, key + \`\\u00021\`);
  }
}"
`;

exports[`t-call (template calling) > a t-call without a body gives the called template an empty 0 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, withoutZero, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = callTemplate(\`inner\`, this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`\\u00021\`);
    const ctx1 = Object.create(ctx);
    ctx1["a"] = 1;
    ctx1[zero] = null;
    const b3 = callTemplate(\`inner\`, this, app, ctx1, node, key + \`\\u00022\`);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-call (template calling) > a t-call without a body gives the called template an empty 0 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx } = helpers;
  
  let block1 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = ctx[zero] ? ctx[zero].call(this, ctx[zeroCtx], node, key + \`\\u00021\`) : text("");
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > an interpolated name keeps the text around its interpolations 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, withoutZero, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = callTemplate(\`a\\\`b\\\\c.\${ctx['n']}\`, this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`\\u00021\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > an interpolated name keeps the text around its interpolations 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span>ok</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-call (template calling) > basic caller 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, withoutZero, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = callTemplate(\`_basic-callee\`, this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`\\u00021\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > basic caller 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span>ok</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-call (template calling) > basic caller, no parent node 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, withoutZero, callTemplate } = helpers;
  
  return function template(ctx, node, key = "") {
    return callTemplate(\`_basic-callee\`, this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`\\u00021\`);
  }
}"
`;

exports[`t-call (template calling) > basic caller, no parent node 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span>ok</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-call (template calling) > call with several sub nodes on same line 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block4 = createBlock(\`<span>hey</span>\`);
  let block6 = createBlock(\`<span>yay</span>\`);
  
  function callBody1(ctx, node, key = "") {
    const b4 = block4();
    const b5 = text(\` \`);
    const b6 = block6();
    return multi([b4, b5, b6]);
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1[zero] = callBody1;
    ctx1[zeroCtx] = ctx;
    const b2 = callTemplate(\`sub\`, this, app, ctx1, node, key + \`\\u00021\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > call with several sub nodes on same line 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = ctx[zero] ? ctx[zero].call(this, ctx[zeroCtx], node, key + \`\\u00021\`) : text("");
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > cascading t-call t-out='0' 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block4 = createBlock(\`<span>hey</span>\`);
  let block6 = createBlock(\`<span>yay</span>\`);
  
  function callBody1(ctx, node, key = "") {
    const b4 = block4();
    const b5 = text(\` \`);
    const b6 = block6();
    return multi([b4, b5, b6]);
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1[zero] = callBody1;
    ctx1[zeroCtx] = ctx;
    const b2 = callTemplate(\`subTemplate\`, this, app, ctx1, node, key + \`\\u00021\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > cascading t-call t-out='0' 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block4 = createBlock(\`<span>cascade 0</span>\`);
  
  function callBody1(ctx, node, key = "") {
    const b4 = block4();
    const b5 = ctx[zero] ? ctx[zero].call(this, ctx[zeroCtx], node, key + \`\\u00021\`) : text("");
    return multi([b4, b5]);
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1[zero] = callBody1;
    ctx1[zeroCtx] = ctx;
    const b2 = callTemplate(\`subSubTemplate\`, this, app, ctx1, node, key + \`\\u00022\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > cascading t-call t-out='0' 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block4 = createBlock(\`<span>cascade 1</span>\`);
  
  function callBody1(ctx, node, key = "") {
    const b4 = block4();
    const b5 = ctx[zero] ? ctx[zero].call(this, ctx[zeroCtx], node, key + \`\\u00021\`) : text("");
    return multi([b4, b5]);
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1[zero] = callBody1;
    ctx1[zeroCtx] = ctx;
    const b2 = callTemplate(\`finalTemplate\`, this, app, ctx1, node, key + \`\\u00022\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > cascading t-call t-out='0' 4`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx } = helpers;
  
  let block1 = createBlock(\`<div><span>cascade 2</span><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = ctx[zero] ? ctx[zero].call(this, ctx[zeroCtx], node, key + \`\\u00021\`) : text("");
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > cascading t-call t-out='0', without external divs 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx, callTemplate } = helpers;
  
  let block3 = createBlock(\`<span>hey</span>\`);
  let block5 = createBlock(\`<span>yay</span>\`);
  
  function callBody1(ctx, node, key = "") {
    const b3 = block3();
    const b4 = text(\` \`);
    const b5 = block5();
    return multi([b3, b4, b5]);
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1[zero] = callBody1;
    ctx1[zeroCtx] = ctx;
    return callTemplate(\`subTemplate\`, this, app, ctx1, node, key + \`\\u00021\`);
  }
}"
`;

exports[`t-call (template calling) > cascading t-call t-out='0', without external divs 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx, callTemplate } = helpers;
  
  let block3 = createBlock(\`<span>cascade 0</span>\`);
  
  function callBody1(ctx, node, key = "") {
    const b3 = block3();
    const b4 = ctx[zero] ? ctx[zero].call(this, ctx[zeroCtx], node, key + \`\\u00021\`) : text("");
    return multi([b3, b4]);
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1[zero] = callBody1;
    ctx1[zeroCtx] = ctx;
    return callTemplate(\`subSubTemplate\`, this, app, ctx1, node, key + \`\\u00022\`);
  }
}"
`;

exports[`t-call (template calling) > cascading t-call t-out='0', without external divs 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx, callTemplate } = helpers;
  
  let block3 = createBlock(\`<span>cascade 1</span>\`);
  
  function callBody1(ctx, node, key = "") {
    const b3 = block3();
    const b4 = ctx[zero] ? ctx[zero].call(this, ctx[zeroCtx], node, key + \`\\u00021\`) : text("");
    return multi([b3, b4]);
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1[zero] = callBody1;
    ctx1[zeroCtx] = ctx;
    return callTemplate(\`finalTemplate\`, this, app, ctx1, node, key + \`\\u00022\`);
  }
}"
`;

exports[`t-call (template calling) > cascading t-call t-out='0', without external divs 4`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx } = helpers;
  
  let block2 = createBlock(\`<span>cascade 2</span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = block2();
    const b3 = ctx[zero] ? ctx[zero].call(this, ctx[zeroCtx], node, key + \`\\u00021\`) : text("");
    return multi([b2, b3]);
  }
}"
`;

exports[`t-call (template calling) > dynamic t-call 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1["val"] = ctx['val'];
    ctx1[zero] = null;
    const b2 = callTemplate((ctx['template']), this, app, ctx1, node, key + \`\\u00021\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > dynamic t-call 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<foo><block-child-0/></foo>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['val'], node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > dynamic t-call 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<bar><block-child-0/></bar>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['val'], node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > inherit context 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["foo"] = 1;
    ctx["bar"] = 2;
    const ctx1 = Object.create(ctx);
    ctx1["bar"] = ctx['bar'];
    ctx1[zero] = null;
    const b2 = callTemplate(\`sub\`, this, app, ctx1, node, key + \`\\u00021\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > inherit context 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['foo'], node, key, "\\u00021");
    const b3 = safeOutput(ctx['bar'], node, key, "\\u00022");
    return multi([b2, b3]);
  }
}"
`;

exports[`t-call (template calling) > nested t-calls with magic variable 0 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx, callTemplate } = helpers;
  
  let block3 = createBlock(\`<p>Some content...</p>\`);
  
  function callBody1(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1[zero] = callBody2;
    ctx1[zeroCtx] = ctx;
    return callTemplate(\`grandchild\`, this, app, ctx1, node, key + \`\\u00021\`);
  }
  
  function callBody2(ctx, node, key = "") {
    return block3();
  }
  
  return function template(ctx, node, key = "") {
    const ctx2 = Object.create(ctx);
    ctx2[zero] = callBody1;
    ctx2[zeroCtx] = ctx;
    return callTemplate(\`child\`, this, app, ctx2, node, key + \`\\u00022\`);
  }
}"
`;

exports[`t-call (template calling) > nested t-calls with magic variable 0 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx } = helpers;
  
  return function template(ctx, node, key = "") {
    return ctx[zero] ? ctx[zero].call(this, ctx[zeroCtx], node, key + \`\\u00021\`) : text("");
  }
}"
`;

exports[`t-call (template calling) > nested t-calls with magic variable 0 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = text(\`grandchild\`);
    const b3 = ctx[zero] ? ctx[zero].call(this, ctx[zeroCtx], node, key + \`\\u00021\`) : text("");
    return multi([b2, b3]);
  }
}"
`;

exports[`t-call (template calling) > recursive template, part 1 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, withoutZero, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><span>hey</span><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    let b2;
    if (false) {
      b2 = callTemplate(\`recursive\`, this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`\\u00021\`);
    }
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > recursive template, part 2 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1["node"] = ctx['root'];
    ctx1[zero] = null;
    const b2 = callTemplate(\`nodeTemplate\`, this, app, ctx1, node, key + \`\\u00021\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > recursive template, part 2 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, prepareList, zero, callTemplate, withKey, keyOf } = helpers;
  
  let block1 = createBlock(\`<div><p><block-child-0/></p><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['node'].val, node, key, "\\u00021");
    const ctx1 = ctx;
    const [k_block3, v_block3, l_block3, c_block3] = prepareList(ctx['node'].children||[]);
    for (let i1 = 0; i1 < l_block3; i1++) {
      let ctx = Object.create(ctx1);
      ctx["subtree"] = k_block3[i1];
      ctx["subtree_first"] = i1 === 0;
      ctx["subtree_last"] = i1 === k_block3.length - 1;
      ctx["subtree_index"] = i1;
      ctx["subtree_value"] = v_block3[i1];
      const key1 = ctx['subtree_index'];
      const skey1 = keyOf(key1);
      const ctx2 = Object.create(ctx);
      ctx2["node"] = ctx['subtree'];
      ctx2[zero] = null;
      c_block3[i1] = withKey(callTemplate(\`nodeTemplate\`, this, app, ctx2, node, key + \`\\u00022\\u0002:\${skey1}\`), key1);
    }
    const b3 = list(c_block3);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-call (template calling) > recursive template, part 3 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1["node"] = ctx['root'];
    ctx1[zero] = null;
    const b2 = callTemplate(\`nodeTemplate\`, this, app, ctx1, node, key + \`\\u00021\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > recursive template, part 3 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, prepareList, zero, callTemplate, withKey, keyOf } = helpers;
  
  let block1 = createBlock(\`<div><p><block-child-0/></p><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['node'].val, node, key, "\\u00021");
    const ctx1 = ctx;
    const [k_block3, v_block3, l_block3, c_block3] = prepareList(ctx['node'].children||[]);
    for (let i1 = 0; i1 < l_block3; i1++) {
      let ctx = Object.create(ctx1);
      ctx["subtree"] = k_block3[i1];
      ctx["subtree_first"] = i1 === 0;
      ctx["subtree_last"] = i1 === k_block3.length - 1;
      ctx["subtree_index"] = i1;
      ctx["subtree_value"] = v_block3[i1];
      const key1 = ctx['subtree_index'];
      const skey1 = keyOf(key1);
      const ctx2 = Object.create(ctx);
      ctx2["node"] = ctx['subtree'];
      ctx2[zero] = null;
      c_block3[i1] = withKey(callTemplate(\`nodeTemplate\`, this, app, ctx2, node, key + \`\\u00022\\u0002:\${skey1}\`), key1);
    }
    const b3 = list(c_block3);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-call (template calling) > recursive template, part 4: with t-set recursive index 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1["recursive_idx"] = 1;
    ctx1["node"] = ctx['root'];
    ctx1[zero] = null;
    const b2 = callTemplate(\`nodeTemplate\`, this, app, ctx1, node, key + \`\\u00021\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > recursive template, part 4: with t-set recursive index 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, prepareList, zero, callTemplate, withKey, keyOf } = helpers;
  
  let block1 = createBlock(\`<div><p><block-child-0/> <block-child-1/></p><block-child-2/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["recursive_idx"] = ctx['recursive_idx']+1;
    const b2 = safeOutput(ctx['node'].val, node, key, "\\u00021");
    const b3 = safeOutput(ctx['recursive_idx'], node, key, "\\u00022");
    const ctx1 = ctx;
    const [k_block4, v_block4, l_block4, c_block4] = prepareList(ctx['node'].children||[]);
    for (let i1 = 0; i1 < l_block4; i1++) {
      let ctx = Object.create(ctx1);
      ctx["subtree"] = k_block4[i1];
      ctx["subtree_first"] = i1 === 0;
      ctx["subtree_last"] = i1 === k_block4.length - 1;
      ctx["subtree_index"] = i1;
      ctx["subtree_value"] = v_block4[i1];
      const key1 = ctx['subtree_index'];
      const skey1 = keyOf(key1);
      const ctx2 = Object.create(ctx);
      ctx2["node"] = ctx['subtree'];
      ctx2["recursive_idx"] = ctx['recursive_idx'];
      ctx2[zero] = null;
      c_block4[i1] = withKey(callTemplate(\`nodeTemplate\`, this, app, ctx2, node, key + \`\\u00023\\u0002:\${skey1}\`), key1);
    }
    const b4 = list(c_block4);
    return block1([], [b2, b3, b4]);
  }
}"
`;

exports[`t-call (template calling) > root t-call with body: t-foreach 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, withKey, zero, zeroCtx, callTemplate } = helpers;
  
  function callBody1(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList([1]);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["i"] = k_block2[i1];
      const key1 = ctx['i'];
      c_block2[i1] = withKey(text(\`1\`), key1);
    }
    return list(c_block2);
  }
  
  return function template(ctx, node, key = "") {
    const ctx2 = Object.create(ctx);
    ctx2[zero] = callBody1;
    ctx2[zeroCtx] = ctx;
    return callTemplate(\`subTemplate\`, this, app, ctx2, node, key + \`\\u00021\`);
  }
}"
`;

exports[`t-call (template calling) > root t-call with body: t-foreach 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`sub\`);
  }
}"
`;

exports[`t-call (template calling) > root t-call with body: t-if false 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx, callTemplate } = helpers;
  
  function callBody1(ctx, node, key = "") {
    let b3;
    if (false) {
      b3 = text(\`zero\`);
    }
    return multi([b3]);
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1[zero] = callBody1;
    ctx1[zeroCtx] = ctx;
    return callTemplate(\`subTemplate\`, this, app, ctx1, node, key + \`\\u00021\`);
  }
}"
`;

exports[`t-call (template calling) > root t-call with body: t-if false 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`sub\`);
  }
}"
`;

exports[`t-call (template calling) > root t-call with body: t-if true 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx, callTemplate } = helpers;
  
  function callBody1(ctx, node, key = "") {
    let b3;
    if (true) {
      b3 = text(\`zero\`);
    }
    return multi([b3]);
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1[zero] = callBody1;
    ctx1[zeroCtx] = ctx;
    return callTemplate(\`subTemplate\`, this, app, ctx1, node, key + \`\\u00021\`);
  }
}"
`;

exports[`t-call (template calling) > root t-call with body: t-if true 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`sub\`);
  }
}"
`;

exports[`t-call (template calling) > root t-call with body: t-out with default 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, zero, zeroCtx, callTemplate } = helpers;
  
  function callBody1(ctx, node, key = "") {
    const out1 = ctx['nothing'];
    return out1 === undefined || out1 === null ? toggler("default", defaultContent1.call(this, ctx, node, key + \`\\u00021\`)) : safeOutput(out1, node, key, "\\u00021");
  }
  
  function defaultContent1(ctx, node, key = "") {
    return text(\`default\`);
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1[zero] = callBody1;
    ctx1[zeroCtx] = ctx;
    return callTemplate(\`subTemplate\`, this, app, ctx1, node, key + \`\\u00022\`);
  }
}"
`;

exports[`t-call (template calling) > root t-call with body: t-out with default 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`sub\`);
  }
}"
`;

exports[`t-call (template calling) > scoped parameters 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx, callTemplate, safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  function callBody1(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["foo"] = 42;
  return text('');
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1[zero] = callBody1;
    ctx1[zeroCtx] = ctx;
    const b2 = callTemplate(\`sub\`, this, app, ctx1, node, key + \`\\u00021\`);
    const b3 = safeOutput(ctx['foo'], node, key, "\\u00022");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-call (template calling) > scoped parameters 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`ok\`);
  }
}"
`;

exports[`t-call (template calling) > scoped parameters, part 2 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, zero, zeroCtx, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  function callBody1(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["foo"] = 42;
    return safeOutput(ctx['foo'], node, key, "\\u00021");
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["foo"] = 11;
    const ctx1 = Object.create(ctx);
    ctx1["foo"] = 43;
    ctx1[zero] = callBody1;
    ctx1[zeroCtx] = ctx;
    const b2 = callTemplate(\`sub\`, this, app, ctx1, node, key + \`\\u00022\`);
    const b4 = safeOutput(ctx['foo'], node, key, "\\u00023");
    return block1([], [b2, b4]);
  }
}"
`;

exports[`t-call (template calling) > scoped parameters, part 2 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, zero, zeroCtx } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['foo'], node, key, "\\u00021");
    const b3 = ctx[zero] ? ctx[zero].call(this, ctx[zeroCtx], node, key + \`\\u00022\`) : text("");
    return multi([b2, b3]);
  }
}"
`;

exports[`t-call (template calling) > t-call and translation contexts 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx, callTemplate } = helpers;
  
  function callBody1(ctx, node, key = "") {
    return text(\`jeu\`);
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1["title"] = 'title';
    ctx1[zero] = callBody1;
    ctx1[zeroCtx] = ctx;
    return callTemplate(\`sub\`, this, app, ctx1, node, key + \`\\u00021\`);
  }
}"
`;

exports[`t-call (template calling) > t-call and translation contexts 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, zero, zeroCtx } = helpers;
  
  let block1 = createBlock(\`<span title="title"><block-child-0/><block-child-1/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['title'], node, key, "\\u00021");
    const b3 = ctx[zero] ? ctx[zero].call(this, ctx[zeroCtx], node, key + \`\\u00022\`) : text("");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-call (template calling) > t-call and translation contexts, variation 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx, callTemplate } = helpers;
  
  function callBody1(ctx, node, key = "") {
    return text(\`jeu\`);
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1["title"] = \`titulo\`;
    ctx1[zero] = callBody1;
    ctx1[zeroCtx] = ctx;
    return callTemplate(\`sub\`, this, app, ctx1, node, key + \`\\u00021\`);
  }
}"
`;

exports[`t-call (template calling) > t-call and translation contexts, variation 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, zero, zeroCtx } = helpers;
  
  let block1 = createBlock(\`<span title="title"><block-child-0/><block-child-1/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['title'], node, key, "\\u00021");
    const b3 = ctx[zero] ? ctx[zero].call(this, ctx[zeroCtx], node, key + \`\\u00022\`) : text("");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-call (template calling) > t-call with attributes 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, callTemplate } = helpers;
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1["v1"] = ctx['val1'];
    ctx1["v2"] = ctx['val2'];
    ctx1[zero] = null;
    return callTemplate(\`sub\`, this, app, ctx1, node, key + \`\\u00021\`);
  }
}"
`;

exports[`t-call (template calling) > t-call with attributes 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/><block-child-1/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['v1'], node, key, "\\u00021");
    const b3 = safeOutput(ctx['v2'], node, key, "\\u00022");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-call (template calling) > t-call with attributes and t-call-context 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callTemplate } = helpers;
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx['obj'];
    return callTemplate(\`sub\`, this, app, Object.assign({}, ctx1, {this: ctx1, 'v1': ctx['val1'], 'v2': ctx['val2']}), node, key + \`\\u00021\`);
  }
}"
`;

exports[`t-call (template calling) > t-call with attributes and t-call-context 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/><block-child-1/><block-child-2/><block-child-3/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['v1'], node, key, "\\u00021");
    const b3 = safeOutput(ctx['v2'], node, key, "\\u00022");
    const b4 = safeOutput(ctx['this'].v3, node, key, "\\u00023");
    const b5 = safeOutput(ctx['this'].v4, node, key, "\\u00024");
    return block1([], [b2, b3, b4, b5]);
  }
}"
`;

exports[`t-call (template calling) > t-call with attributes and t-out='0' 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx, callTemplate } = helpers;
  
  function callBody1(ctx, node, key = "") {
    return text(\`Hello\`);
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1["v_2"] = 1;
    ctx1[zero] = callBody1;
    ctx1[zeroCtx] = ctx;
    return callTemplate(\`sub\`, this, app, ctx1, node, key + \`\\u00021\`);
  }
}"
`;

exports[`t-call (template calling) > t-call with attributes and t-out='0' 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, zero, zeroCtx } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/><block-child-1/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['v_2'], node, key, "\\u00021");
    const b3 = ctx[zero] ? ctx[zero].call(this, ctx[zeroCtx], node, key + \`\\u00022\`) : text("");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-call (template calling) > t-call with body content as root of a template 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx, callTemplate } = helpers;
  
  let block2 = createBlock(\`<p>antony</p>\`);
  
  function callBody1(ctx, node, key = "") {
    return block2();
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1[zero] = callBody1;
    ctx1[zeroCtx] = ctx;
    return callTemplate(\`antony\`, this, app, ctx1, node, key + \`\\u00021\`);
  }
}"
`;

exports[`t-call (template calling) > t-call with body content as root of a template 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx } = helpers;
  
  let block1 = createBlock(\`<foo><block-child-0/></foo>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = ctx[zero] ? ctx[zero].call(this, ctx[zeroCtx], node, key + \`\\u00021\`) : text("");
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > t-call with t-if 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, withoutZero, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    let b2;
    if (ctx['flag']) {
      b2 = callTemplate(\`sub\`, this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`\\u00021\`);
    }
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > t-call with t-if 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span>ok</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-call (template calling) > t-call with t-set inside and body text content 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["val"] = \`yip yip\`;
    const ctx1 = Object.create(ctx);
    ctx1["val"] = ctx['val'];
    ctx1[zero] = null;
    const b2 = callTemplate(\`sub\`, this, app, ctx1, node, key + \`\\u00021\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > t-call with t-set inside and body text content 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['val'], node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > t-call with t-set inside and outside 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, zero, callTemplate, withKey, keyOf } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['list']);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["v"] = k_block2[i1];
      ctx["v_first"] = i1 === 0;
      ctx["v_last"] = i1 === k_block2.length - 1;
      ctx["v_index"] = i1;
      ctx["v_value"] = v_block2[i1];
      const key1 = ctx['v_index'];
      const skey1 = keyOf(key1);
      ctx["val"] = ctx['v'].val;
      const ctx2 = Object.create(ctx);
      ctx2["val3"] = ctx['val']*3;
      ctx2[zero] = null;
      c_block2[i1] = withKey(callTemplate(\`sub\`, this, app, ctx2, node, key + \`\\u00021\\u0002:\${skey1}\`), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > t-call with t-set inside and outside 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['val3'], node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > t-call with t-set inside and outside. 2 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, callTemplate } = helpers;
  
  let block1 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["w"] = 'fromwrapper';
    const ctx1 = Object.create(ctx);
    ctx1["w"] = ctx['w'];
    ctx1["list"] = ctx['list'];
    ctx1[zero] = null;
    const b2 = callTemplate(\`main\`, this, app, ctx1, node, key + \`\\u00021\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > t-call with t-set inside and outside. 2 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, zero, callTemplate, withKey, keyOf } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['list']);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["v"] = k_block2[i1];
      ctx["v_first"] = i1 === 0;
      ctx["v_last"] = i1 === k_block2.length - 1;
      ctx["v_index"] = i1;
      ctx["v_value"] = v_block2[i1];
      const key1 = ctx['v_index'];
      const skey1 = keyOf(key1);
      ctx["val"] = ctx['v'].val;
      const ctx2 = Object.create(ctx);
      ctx2["val3"] = ctx['val']*3;
      ctx2["w"] = ctx['w'];
      ctx2[zero] = null;
      c_block2[i1] = withKey(callTemplate(\`sub\`, this, app, ctx2, node, key + \`\\u00021\\u0002:\${skey1}\`), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > t-call with t-set inside and outside. 2 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block2 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b3 = safeOutput(ctx['val3'], node, key, "\\u00021");
    const b2 = block2([], [b3]);
    const b4 = safeOutput(ctx['w'], node, key, "\\u00022");
    return multi([b2, b4]);
  }
}"
`;

exports[`t-call (template calling) > t-call, conditional and t-set in t-call body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, withoutZero, callTemplate, zeroCtx } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  function callBody1(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["v"] = 'success';
  return text('');
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    let b2, b3;
    ctx["v1"] = 'elif';
    if (ctx['v1']==='if') {
      b2 = callTemplate(\`callee1\`, this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`\\u00021\`);
    } else if (ctx['v1']==='elif') {
      const ctx1 = Object.create(ctx);
      ctx1[zero] = callBody1;
      ctx1[zeroCtx] = ctx;
      b3 = callTemplate(\`callee2\`, this, app, ctx1, node, key + \`\\u00022\`);
    }
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-call (template calling) > t-call, conditional and t-set in t-call body 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div>callee2 <block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['v'], node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > t-call-context 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callTemplate } = helpers;
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx['obj'];
    return callTemplate(\`sub\`, this, app, Object.assign({}, ctx1, {this: ctx1}), node, key + \`\\u00021\`);
  }
}"
`;

exports[`t-call (template calling) > t-call-context 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].value, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > t-call-context and value in body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx, callTemplate } = helpers;
  
  function callBody1(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["value2"] = ctx['aaron'];
  return text('');
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx['obj'];
    return callTemplate(\`sub\`, this, app, Object.assign({}, ctx1, {this: ctx1, [zero]: callBody1, [zeroCtx]: ctx}), node, key + \`\\u00021\`);
  }
}"
`;

exports[`t-call (template calling) > t-call-context and value in body 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/><block-child-1/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].value1, node, key, "\\u00021");
    const b3 = safeOutput(ctx['this'].value2, node, key, "\\u00022");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-call (template calling) > t-out inside t-call, with t-set outside 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, withoutZero, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["v"] = \`Hi\`;
    const b2 = callTemplate(\`sub\`, this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`\\u00021\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > t-out inside t-call, with t-set outside 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['v'], node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > t-out=0 renders its default body when the t-call has none 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, withoutZero, callTemplate, zeroCtx } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/><block-child-1/></span>\`);
  
  function callBody1(ctx, node, key = "") {
    return text(\`given\`);
  }
  
  return function template(ctx, node, key = "") {
    const b2 = callTemplate(\`sub\`, this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`\\u00021\`);
    const ctx1 = Object.create(ctx);
    ctx1[zero] = callBody1;
    ctx1[zeroCtx] = ctx;
    const b3 = callTemplate(\`sub\`, this, app, ctx1, node, key + \`\\u00022\`);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-call (template calling) > t-out=0 renders its default body when the t-call has none 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  function defaultContent1(ctx, node, key = "") {
    return text(\`fallback\`);
  }
  
  return function template(ctx, node, key = "") {
    const b2 = ctx[zero] ? ctx[zero].call(this, ctx[zeroCtx], node, key + \`\\u00021\`) : defaultContent1.call(this, ctx, node, key + \`\\u00021\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > two dynamic t-calls in a row are both dynamic 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, withoutZero, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = callTemplate((ctx['a']), this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`\\u00021\`);
    const b3 = callTemplate((ctx['b']), this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`\\u00022\`);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-call (template calling) > two dynamic t-calls in a row are both dynamic 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<foo/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-call (template calling) > two dynamic t-calls in a row are both dynamic 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<bar/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-call (template calling) > values set in body are in call context 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx, callTemplate } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  function callBody1(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["foo"] = 'ko';
  return text('');
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1["foo"] = 'ok';
    ctx1[zero] = callBody1;
    ctx1[zeroCtx] = ctx;
    const b2 = callTemplate(\`sub\`, this, app, ctx1, node, key + \`\\u00021\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-call (template calling) > values set in body are in call context 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['foo'], node, key, "\\u00021");
  }
}"
`;

exports[`t-call (template calling) > with unused body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx, callTemplate } = helpers;
  
  function callBody1(ctx, node, key = "") {
    return text(\`WHEEE\`);
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1[zero] = callBody1;
    ctx1[zeroCtx] = ctx;
    return callTemplate(\`sub\`, this, app, ctx1, node, key + \`\\u00021\`);
  }
}"
`;

exports[`t-call (template calling) > with unused body 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div>ok</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-call (template calling) > with unused setbody 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx, callTemplate } = helpers;
  
  function callBody1(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["qux"] = 3;
  return text('');
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1[zero] = callBody1;
    ctx1[zeroCtx] = ctx;
    return callTemplate(\`sub\`, this, app, ctx1, node, key + \`\\u00021\`);
  }
}"
`;

exports[`t-call (template calling) > with unused setbody 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div>ok</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-call (template calling) > with used body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx, callTemplate } = helpers;
  
  function callBody1(ctx, node, key = "") {
    return text(\`ok\`);
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1[zero] = callBody1;
    ctx1[zeroCtx] = ctx;
    return callTemplate(\`sub\`, this, app, ctx1, node, key + \`\\u00021\`);
  }
}"
`;

exports[`t-call (template calling) > with used body 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx } = helpers;
  
  let block1 = createBlock(\`<h1><block-child-0/></h1>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = ctx[zero] ? ctx[zero].call(this, ctx[zeroCtx], node, key + \`\\u00021\`) : text("");
    return block1([], [b2]);
  }
}"
`;
